{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 32,
  "lineage": "3c47e176-8050-23dd-e359-c26ebdeedb7a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:057569470997:internet-gateway/igw-0f33e907948ed8f40",
            "id": "igw-0f33e907948ed8f40",
            "owner_id": "057569470997",
            "tags": {
              "Name": "Medusa-IGW"
            },
            "tags_all": {
              "Name": "Medusa-IGW"
            },
            "vpc_id": "vpc-093095f8c0448b3e4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:057569470997:route-table/rtb-0677984cdca69ba59",
            "id": "rtb-0677984cdca69ba59",
            "owner_id": "057569470997",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f33e907948ed8f40",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Medusa-PublicRT"
            },
            "tags_all": {
              "Name": "Medusa-PublicRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-093095f8c0448b3e4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03ca14b09ed847e88",
            "route_table_id": "rtb-0677984cdca69ba59",
            "subnet_id": "subnet-0c9e2985e72a84c18"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_service_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:057569470997:security-group/sg-0a81ebf43ab2e6e14",
            "description": "Allow inbound traffic to ECS containers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a81ebf43ab2e6e14",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "medusa-ecs-sg",
            "name_prefix": "",
            "owner_id": "057569470997",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Medusa ECS SG"
            },
            "tags_all": {
              "Name": "Medusa ECS SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-093095f8c0448b3e4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:057569470997:subnet/subnet-0c9e2985e72a84c18",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c9e2985e72a84c18",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "057569470997",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Medusa-PublicSubnet"
            },
            "tags_all": {
              "Name": "Medusa-PublicSubnet"
            },
            "vpc_id": "vpc-093095f8c0448b3e4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:057569470997:vpc/vpc-093095f8c0448b3e4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0db9874c1cea70b7d",
            "default_route_table_id": "rtb-06c48b335dc5c198c",
            "default_security_group_id": "sg-05459e7b5ea862633",
            "dhcp_options_id": "dopt-05f39fe6fc0e3abf1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-093095f8c0448b3e4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06c48b335dc5c198c",
            "owner_id": "057569470997",
            "tags": {
              "Name": "Medusa-VPC"
            },
            "tags_all": {
              "Name": "Medusa-VPC"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}